added some more tweaks so that the events pages look just about correct on a phone

--- a/web/style/EventPage.less
+++ b/web/style/EventPage.less
@@ -11,6 +11,10 @@
 }
 
 @media only screen and (max-width : 768px) {
+	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div > div.ticket-group > ul.ticket-group-types > li.ticket-type > div.decoration{ display: none; }
+}
+
+@media only screen and (max-width : 768px) {
 	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div.invoice > table.invoice-table { max-width: 90%; }
 }
 
@@ -27,7 +31,11 @@
 }
 
 @media only screen and (max-width : 768px) {
-	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div > div.SearchResults > div.results-list > div.SearchResult.row.recommended > div.impact.col-md-6.hidden-xs { display: block!important; }
+	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div > div.SearchResults > div.results-list > div.SearchResult.row.recommended > a.logo.col-md-2.col-xs-4 { display: none; }
+}
+
+@media only screen and (max-width : 768px) {
+	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div > div.SearchResults > div.results-list > div.SearchResult.row.recommended > div.impact.col-md-6.hidden-xs { display: block!important; max-width: 50%; }
 }
 
 @media only screen and (max-width : 768px) {
@@ -35,8 +43,20 @@
 }
 
 @media only screen and (max-width : 768px) {
+	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div > div.SearchResults > div.results-list > div.SearchResult.row.recommended > div.impact.col-md-6.hidden-xs > div.impact-detail { display: none; }
+}
+
+@media only screen and (max-width : 768px) {
 	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div > div.SearchResults > div.results-list > div.SearchResult.row.recommended > div.impact.col-md-6.hidden-xs > div.read-more.btn-default { max-width: 25%; float: left; }
 }
+
+@media only screen and (max-width : 768px) {
+	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div > div.SearchResults > div.results-list > div.SearchResult.row.recommended > div.impact.col-md-6.hidden-xs > button.read-more.btn.btn-default { max-width: 25%; float: left; }
+}
+
+@media only screen and (max-width : 768px) {
+	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div > div.SearchResults > div.results-list > div.SearchResult.row.recommended > a.text-summary.col-md-4.col-xs-8 { min-width: 44% }
+}	
 
 @media only screen and (max-width : 768px) {
 	div#mainDiv > div > div.container.avoid-navbar > div#register.page > div > div.Wizard > div.WizardStage > div.ConfirmedTicketList > div.clear > div.padded-block > center > a.btn.btn-primary.btn-lg { max-width: 100%; word-wrap: normal; white-space: normal; }
