--- a/web/style/FundRaiserPage.less
+++ b/web/style/FundRaiserPage.less
@@ -160,3 +160,7 @@
 @media only screen and (max-width : 768px) {
 	div#mainDiv > div > div.container.avoid-navbar > div#fundraiser.page > div > div#FundRaiserPage.container > div.row > div.charity-info.col-md-6 { min-height: 300px; }
 }
+
+@media only screen and (max-width : 320px) {
+	div#mainDiv > div > div.container.avoid-navbar > div#fundraiser.page > div > div#FundRaiserPage.container > div.vitals.row > div.col-md-6 > div.user-event-photo { height: 200px; width: 200px; }
+}	
