made the login widget look a whole lot better on mobile devices

--- a/web/style/LoginWidget.less
+++ b/web/style/LoginWidget.less
@@ -28,3 +28,16 @@
 		border-radius: 0.25em;
 	}
 // }
+
+
+@media only screen and (max-width : 768px) {
+	.login-guts .login-divs { display: inherit; }
+}
+
+@media only screen and (max-width : 768px) {
+	.login-guts .login-divs .login-email { margin-right: 0px; }
+}
+
+@media only screen and (max-width : 768px) {
+	.login-guts .login-divs .login-social { margin-top: 1em; }
+}	
