--- a/web/style/colours.less
+++ b/web/style/colours.less
@@ -40,6 +40,9 @@
 
 @color-twitter: #4099ff;
 @color-facebook: #3b5998;
+.color-facebook {color: @color-facebook;}
+.color-twitter {color: @color-twitter;} // TODO remove one of these
+.color-instagram {color:#e95950;}
 
 @primary-bg: @paler-blue;
 @default-bg: #6e707b;
@@ -59,10 +62,3 @@
 @progress-bar-done: @pale-blue;
 @donation-date: @grey-lightest;
 
-.color-facebook {color: #3b5998;}
-.color-twitter {color:#4099ff;}
-.color-instagram {color:#e95950;}
-
-// .bgcolor-facebook {background-color: #3b5998; color:white;}
-// .bgcolor-twitter {background-color:#4099ff; color:white;}
-// .bgcolor-instagram {background-color:#e95950; color:white;}
