--- a/web/style/animation.less
+++ b/web/style/animation.less
@@ -24,8 +24,22 @@
 }
 
 
+/* spinner */
+.loader-box {
+	padding-top: 50px;
+}
+.loader {
+	border-top: 16px solid @orange;
+	border-right: 16px solid @green;
+	border-bottom: 16px solid @pale-blue;
+	border-left: 16px solid @grey;
 
-
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+// ./loader
 
 // Spin animation
 .spinning {
