fixed a bad rsync param in the publish script.  And added the @import to animation.less because it was missing

--- a/web/style/animation.less
+++ b/web/style/animation.less
@@ -1,4 +1,6 @@
 // Hides an item by sliding it to one side while fading out (and shows by the reverse)
+@import "colours.less";
+
 .slide-hide {
 	transition: opacity 0.25s, transform 0.25s, visibility 0.25s;
 }
