no-money-colour

--- a/web/style/FundRaiserPage.less
+++ b/web/style/FundRaiserPage.less
@@ -63,6 +63,10 @@
 		color: @bold-text-colour;
 	}
 
+	.no-money {
+		color: @bold-text-colour;
+	}
+
 	.ProgressGraph {
 		height: 50%;
 		text-align: center;
