Made changes to emergent "Share" window. Made some changes to layout, and added skeleton HTML for future feature. Forced email strings given to use text-wrap. Found that unusually long email addresses would fly off the end of the div.
Still not content with the layout. Will continue working on it.

--- a/web/style/main.less
+++ b/web/style/main.less
@@ -87,7 +87,7 @@ img.logo-large {
 @import "LoginWidget.less";
 @import "footer.less";
 @import "EventPage.less";
-
+@import "ShareWidget.less";
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
