--- a/web/style/CharityPage.less
+++ b/web/style/CharityPage.less
@@ -188,11 +188,6 @@
 				img.project-image {
 					width: 100%;
 				}
-				.project-stories{
-					.quote {
-						color: @donation-number-fg;
-					}
-				}
 			}
 		} // ./charity-extra
 	} // ./info-column
@@ -203,7 +198,13 @@
 	}
 } // ./#charity
 
-
+.quote {
+	padding:2rem;
+	font-size:175%;
+}
+.quote-marks {
+	color: @donation-number-fg;
+}
 
 // .info-column
 .charity-about {
