rename donation forms

--- a/web/style/CharityPageImpactAndDonate.less
+++ b/web/style/CharityPageImpactAndDonate.less
@@ -1,6 +1,6 @@
 @import "colours.less";
 
-.DonationForm {
+.CharityPageImpactAndDonate {
 	width: 100%;
 }
 
@@ -201,7 +201,7 @@
 	background-color: @colour-04;
 }
 
-.DonationForm {
+.CharityPageImpactAndDonate {
 	.impact {
 		.impact-text {
 			text-align: center;
