--- a/web/style/main.less
+++ b/web/style/main.less
@@ -78,8 +78,8 @@ img.logo-large {
 @import "EditCharityPage.less";
 @import "SearchPage.less";
 @import "CharityPage.less";
-@import "Donation.less";
-@import "NewDonationForm.less";
+@import "CharityPageImpactAndDonate.less";
+@import "DonationWizard.less";
 @import "WizardProgressWidget.less";
 @import "FundRaiserPage.less";
 @import "RegisterPage.less";
