--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -38,11 +38,9 @@
 @charity-page-greybg: #E4E7EB;
 @charity-page-greyline: #C8CBD1;
 
+// NB: others are done in base/style/colours.less
 @color-twitter: #4099ff;
 @color-facebook: #3b5998;
-.color-facebook {color: @color-facebook;}
-.color-twitter {color: @color-twitter;} // TODO remove one of these
-.color-instagram {color:#e95950;}
 
 @primary-bg: @paler-blue;
 @default-bg: #6e707b;
