--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,8 +1,8 @@
 // Styling for the SoGive app
+@impoty "../js/base/style/main-base.less";
 @import "colours.less";
 @import "positioning.less";
 @import "buttons.less";
-@import "Misc.less";
 
 @font-face {
 	font-family: 'Roboto';
@@ -80,7 +80,6 @@ img.logo-large {
 @import "CharityPage.less";
 @import "CharityPageImpactAndDonate.less";
 @import "DonationWizard.less";
-@import "WizardProgressWidget.less";
 @import "FundRaiserPage.less";
 @import "RegisterPage.less";
 @import "SocialShare.less";
