--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,5 +1,7 @@
 // Styling for the SoGive app
-@impoty "../js/base/style/main-base.less";
+
+@import "../js/base/style/main-base.less";
+
 @import "colours.less";
 @import "positioning.less";
 @import "buttons.less";
