--- a/src/style/main.less
+++ b/src/style/main.less
@@ -48,9 +48,18 @@
 
 // Page specific stuff
 @import "Page.less";
+@import "EditCharityPage.less";
+@import "SearchPage.less";
+@import "CharityPage.less";
+@import "CharityPageImpactAndDonate.less";
+@import "DonationWizard.less";
+@import "FundRaiserPage.less";
+@import "RegisterPage.less";
+@import "SocialShare.less";
 @import "LoginWidget.less";
 @import "footer.less";
-@import "GardenPage.less";
+@import "EventPage.less";
+@import "ShareWidget.less";
 
 /* https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
 .flexbox-1row {
