no superfluous impact summary text

--- a/src/style/SearchPage.less
+++ b/src/style/SearchPage.less
@@ -139,6 +139,7 @@
 	}
 	.impact {
 		.impact-summary {
+			margin-top: 0.5em;
 			.impact-count, .money .amount {
 				color: @bold-text-colour;
 				font-size: 120%;
