button small print

--- a/src/style/buttons.less
+++ b/src/style/buttons.less
@@ -58,4 +58,11 @@
 		// no right shadow
 		box-shadow: none; // 0px 2px 2px rgba(0,0,0,0.2);
 	}
+
+	/* small print text within a button */	
+	.btn-smallprint {
+		font-size: 85%; // same as BS .small
+		max-width: 150px;
+		line-height: 100%;
+	}
 }
