--- a/src/style/buttons.less
+++ b/src/style/buttons.less
@@ -64,5 +64,6 @@
 .btn-smallprint {
 	font-size: 85%; // same as BS .small
 	max-width: 150px;
-	line-height: 100%;
+	line-height: 100%;	
+	white-space: normal; // BS prevents word-wrap otherwise
 }
