--- a/src/style/CharityPageImpactAndDonate.less
+++ b/src/style/CharityPageImpactAndDonate.less
@@ -44,7 +44,7 @@
 	.project-image {
 		text-align: center;
 		img {
-			// width: 100%;
+			max-width: 100%; // overspill bug Jan 2019 - reported by Sanjay
 			max-height: 380px;
 			min-height: 50px;
 			// IE 11 and Edge 15 do not understand object-fit
