font-roboto-not-bebas

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -10,6 +10,9 @@
 	font-family: 'Roboto';
 	src: url('../fonts/Roboto-Regular.ttf');
 }
+h1, .h1, h2, .h2, h3, .h3 {
+	font-family: Roboto;
+}
 
 .avoid-navbar {
     margin-top: @navbar-height + 1;
@@ -69,9 +72,6 @@
 }
 .flexbox {
 	display: flex;
-}
-.flexitem {
-
 }
 
 // Let any singleton column be centred in its row
