--- a/src/style/Page.less
+++ b/src/style/Page.less
@@ -30,7 +30,7 @@ For now -- safer to have the Kiltwalk stuff styled separately
 	margin: auto;
 	background-color: white;
 	box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.2);	
-	min-height: 50vw;
+	min-height: 50vh;
 
 	/** 
 	a branded picture banner
