--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -60,3 +60,7 @@
 @progress-bar-done: @pale-blue;
 @donation-date: @grey-lightest;
 
+.text-gold {color: #D6AF36;}
+.text-silver {color:#A7A7AD;}
+.text-bronze {color: #A77044;}
+
