bugfix webex error handling

--- a/src/style/FundRaiserPage.less
+++ b/src/style/FundRaiserPage.less
@@ -1,6 +1,10 @@
 @import "positioning.less";
 @import "colours.less";
 
+#fundraiser {
+	.padded-page;	
+}
+
 .bottom-divider {
 	border-bottom: 1px solid @charity-page-greyline;
 }
