--- a/src/style/RegisterPage.less
+++ b/src/style/RegisterPage.less
@@ -3,6 +3,10 @@
 @import "colours.less";
 
 #register {
+	.padded-page;	
+}
+
+#register {
 	.ticket-group {		
 		.ticket-group-types {
 			.padded-block;
