--- a/src/style/main.less
+++ b/src/style/main.less
@@ -58,6 +58,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 @import "DonationWizard.less";
 @import "FundRaiserPage.less";
 @import "RegisterPage.less";
+@import "CardShopPage.less";
 @import "SocialShare.less";
 @import "LoginWidget.less";
 @import "footer.less";
