--- a/src/style/CardShopPage.less
+++ b/src/style/CardShopPage.less
@@ -5,11 +5,19 @@
 @import "Page.less";
 @import "colours.less";
 
-#cardshop {
+#checkout {
 	.padded-page;	
 }
 
-#cardshop {
+.xmas-card-preview-img {
+	width:100%;
+}
+.xmas-card-img {
+	max-width:100%;
+	max-height:70%;
+}
+
+#cardshop, #checkout {
 	.ticket-group {		
 		.ticket-group-types {
 			.padded-block;
