--- a/src/style/CardShopPage.less
+++ b/src/style/CardShopPage.less
@@ -18,6 +18,10 @@
 }
 
 #cardshop, #checkout {
+	
+	background: white;
+	padding: 1vw;	
+
 	.ticket-group {		
 		.ticket-group-types {
 			.padded-block;
