CahrShop: Tiny fixes

--- a/src/style/CardShopPage.less
+++ b/src/style/CardShopPage.less
@@ -22,7 +22,13 @@
 	background: white;
 	padding: 1vw;	
 
+	.page-banner {
+		width: 100%;
+		margin-bottom: 2em;
+	}
+
 	.ticket-group {		
+
 		.ticket-group-types {
 			.padded-block;
 			list-style-type: none;
