CardShop: Banner fixes

--- a/src/style/CardShopPage.less
+++ b/src/style/CardShopPage.less
@@ -22,9 +22,10 @@
 	background: white;
 	padding: 1vw;	
 
-	.page-banner {
-		width: 100%;
-		margin-bottom: 2em;
+	.banner-div {
+		background-color: #830000;
+		display: flex;
+		justify-content: center;
 	}
 
 	.ticket-group {		
