pick card tweak

--- a/src/style/CardShopPage.less
+++ b/src/style/CardShopPage.less
@@ -17,6 +17,11 @@
 	max-height:70%;
 }
 
+#cardshop .ShopChoice.selected {
+	border: solid 1px @green;
+	box-shadow: rgba(0,200,80,128) 5px 5px 5px;
+}
+
 #cardshop, #checkout {
 	
 	background: white;
