--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,6 +1,7 @@
 // Styling for the SoGive app
 
 @import "../js/base/style/main-base.less";
+@import "./bs3-4polyfill.less";
 
 @import "colours.less";
 @import "positioning.less";
