FundRaiserPage: Fixed progress text position when no metre is present

--- a/src/style/FundRaiserPage.less
+++ b/src/style/FundRaiserPage.less
@@ -105,6 +105,12 @@
 		height: 50%;
 		text-align: center;
 		color: black;
+
+		// Rules below maintain position of text even when no progress bar is present (eg wedding fundrasing)
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		width: 100%;
 	}
 } // /.DonationProgress
 
