Reactstrap update: ready for bug hunting

--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -31,7 +31,7 @@
 						border: none;
 						outline: none;
 					}
-
+					position: relative; // use as size/position reference for tab shape
 					border: none;
 					border-radius: 0;
 					margin: 0;
@@ -40,6 +40,7 @@
 					font-weight: bold;
 					/* Remove bootstrap background */
 					background-color: transparent;
+					
 					/* Fancy tab shape */
 					&:before {
 						content: ''; 
