--- a/src/style/main.less
+++ b/src/style/main.less
@@ -7,6 +7,10 @@
 @import "positioning.less";
 @import "buttons.less";
 
+html {
+	font-size: 14px; // Make new rem sizing approximately match Bootstrap 3 sizing
+}
+
 @font-face {
 	font-family: 'Roboto';
 	src: url('../fonts/Roboto-Regular.ttf');
