Webpack LESS compilation

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -13,7 +13,7 @@ html {
 
 @font-face {
 	font-family: 'Roboto';
-	src: url('../fonts/Roboto-Regular.ttf');
+	src: url('/fonts/Roboto-Regular.ttf');
 }
 h1, .h1, h2, .h2, h3, .h3 {
 	font-family: Roboto;
