--- a/src/style/SearchPage.less
+++ b/src/style/SearchPage.less
@@ -53,7 +53,7 @@
 	background-color: white;
 	box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, 0.1);
 	/* Extra space for the "recommended" tab */
-	&.recommended {
+	&.impact-high {
 		margin-top: 3em;
 	}
 	
