Search page: fix search box styling (depends on new "append" support in wwappbase.js PropControl)

--- a/src/style/SearchPage.less
+++ b/src/style/SearchPage.less
@@ -238,11 +238,13 @@
 }
 
 .sogive-search-box {
-	border: none;
-	border-radius: 0px !important;
-	outline: 0;
-	height: 2.5em !important;
-	font-size: 150% !important;
+	input, button {
+		font-size: 150% ;
+		height: 2.5em ;
+		border-radius: 0px !important;
+		border: none;
+		outline: 0;
+	}
 }
 
 .field-clear-button {
