SimpleEditCharityPage: Added breathing room before footer.

--- a/src/style/EditCharityPage.less
+++ b/src/style/EditCharityPage.less
@@ -1,3 +1,7 @@
 .MetaEditorItem {
 	margin-right: 5px;
 }
+
+.EditCharityPage {
+	margin-bottom: 120px; // twice height of footer, for breathing space
+}
