--- a/src/style/EventPage.less
+++ b/src/style/EventPage.less
@@ -1,3 +1,12 @@
+
+
+/**
+
+FIXME refactor and clean this up -- this is a confusing use of css.
+If size-specific parts are needed, document why with a comment.
+
+*/
+
 @media only screen and (max-width : 768px) {
 	div#mainDiv > div > div.container.avoid-navbar > div#event.page > div.col-md-8.col-md-offset-2 > h2 { text-align: center;}
 }
