--- a/src/style/main.less
+++ b/src/style/main.less
@@ -24,13 +24,13 @@ h1, .h1, h2, .h2, h3, .h3 {
 }
 
 .navbar-brand, .navbar-nav li a {
-    line-height: @navbar-height;
+    line-height: @navbar-height;   // Is this needed? May 2020
     height: @navbar-height;
     text-transform: lowercase;
 }
 
 /* Override the above so the account/logout menu looks normal */
-.dropdown-menu li a {
+.dropdown li a {
 	line-height: initial !important;
 	height: auto !important;
 }
