--- a/src/style/main.less
+++ b/src/style/main.less
@@ -90,3 +90,15 @@ body {
 	font-family: 'Nunito Sans', sans-serif;
 	color: @colour-03;
 }
+
+// BS3 legacy support
+.well {
+	min-height: 10px;
+	padding: 9px;
+	margin-bottom: 10px;
+	background-color: #f5f5f5;
+	border: 1px solid #e3e3e3;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
+}
