Update Title styling on charity page

--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -71,15 +71,16 @@
 #charity {
 	.impact-column {
 		.header {
-			background: #C1DEF2;
 			.extend-bg-to-sides(@bs-column-padding);
 			padding-top: @band-1-height;
 			margin-bottom: 30px;
 
 			.charity-name {
-				background-color: #D2D6C3;
-				text-transform: uppercase;
-				font-weight: bold;
+				text-transform: capitalize;
+				font-family: 'Nunito Sans';
+				font-weight: 800;
+				font-size: 32px;
+				color: #414141;
 				margin-top: 0;
 				margin-bottom: 0;
 				.extend-bg-to-sides(@bs-column-padding);
