Update tags styling on Charity Page

--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -87,8 +87,12 @@
 				line-height: @band-2-height;
 			}
 			.tags {
-				color: white;
-				text-transform: lowercase;
+				/* Black */
+				color: #414141;
+				font-family: 'Nunito Sans';
+				font-size: 14px;
+				font-style: italic;
+				font-weight: normal;
 				margin-top: 0;
 				margin-bottom: 0;
 				border-left: 0;
@@ -98,19 +102,6 @@
 
 				span {
 					line-height: 32px;
-				}
-
-				&.why-tags {					
-					span {
-						border-left: 15px solid @why-tags-fade;
-						background-color: @why-tags;
-					}
-				}
-				&.where-tags {					
-					span {
-						border-left: 15px solid @where-tags-fade;
-						background-color: @where-tags;
-					}
 				}
 
 				a {
