Display charity logo at top of charity page

--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -86,6 +86,9 @@
 				.extend-bg-to-sides(@bs-column-padding);
 				line-height: @band-2-height;
 			}
+			.charity-logo {
+				height: 60px;
+			}
 			.tags {
 				/* Black */
 				color: #414141;
