--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -85,6 +85,13 @@
 				.extend-bg-to-sides(@bs-column-padding);
 				line-height: @band-2-height;
 			}
+			.charity-section-title {
+				text-transform: capitalize;
+				font-family: Nunito Sans;
+				font-style: normal;
+				font-weight: bold;
+				font-size: 24px;
+			}
 			.charity-logo {
 				height: 60px;
 			}
@@ -113,6 +120,13 @@
 			}
 
 		} // ./header
+		.charity-section-text {
+			font-family: Nunito Sans;
+			font-style: normal;
+			font-weight: normal;
+			font-size: 16px;
+			line-height: 22px;
+		}
 	} // ./.impact-column
 } 
 
