Fixing things from pull request comments
- Handled cases where tags, About and Analysis sections are empty.

- Put css colors in colors.less

- Added new fonts.less file to store header and text styles

--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -33,6 +33,7 @@
 
 @charity-page-greybg: #E4E7EB;
 @charity-page-greyline: #C8CBD1;
+@charity-page-summary-text-colour: #414141;
 
 // NB: others are done in base/style/colours.less
 @color-twitter: #4099ff;
