--- a/src/style/main.less
+++ b/src/style/main.less
@@ -4,6 +4,7 @@
 @import "./bs3-4polyfill.less";
 
 @import "colours.less";
+@import "fonts.less";
 @import "positioning.less";
 @import "buttons.less";
 
