--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -1,4 +1,5 @@
 @import "colours.less";
+@import "fonts.less";
 @import "positioning.less";
 
 // TODO move some of this from page-specific styling to "these are our widgets"
@@ -73,32 +74,12 @@
 			.extend-bg-to-sides(@bs-column-padding);
 			padding-top: @band-1-height;
 			margin-bottom: 30px;
-
-			.charity-name {
-				text-transform: capitalize;
-				font-family: 'Nunito Sans';
-				font-weight: 800;
-				font-size: 32px;
-				color: #414141;
-				margin-top: 0;
-				margin-bottom: 0;
-				.extend-bg-to-sides(@bs-column-padding);
-				line-height: @band-2-height;
-			}
-			.charity-section-title {
-				text-transform: capitalize;
-				font-family: Nunito Sans;
-				font-style: normal;
-				font-weight: bold;
-				font-size: 24px;
-			}
 			.charity-logo {
 				height: 60px;
 			}
 			.tags {
-				/* Black */
-				color: #414141;
-				font-family: 'Nunito Sans';
+				color: @charity-page-summary-text-colour;
+				font-family: @standard-text-font;
 				font-size: 14px;
 				font-style: italic;
 				font-weight: normal;
@@ -120,13 +101,6 @@
 			}
 
 		} // ./header
-		.charity-section-text {
-			font-family: Nunito Sans;
-			font-style: normal;
-			font-weight: normal;
-			font-size: 16px;
-			line-height: 22px;
-		}
 	} // ./.impact-column
 } 
 
