Fixing things from pull request comments
- Handled cases where tags, About and Analysis sections are empty.

- Put css colors in colors.less

- Added new fonts.less file to store header and text styles

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -5,6 +5,7 @@
 
 @import "sogive-fonts.less";
 @import "colours.less";
+@import "fonts.less";
 @import "positioning.less";
 @import "buttons.less";
 
