Make Donate button match mocks and display it in charity summary

--- a/src/style/buttons.less
+++ b/src/style/buttons.less
@@ -27,10 +27,8 @@
 // 	}
 
 	.btn-primary {
-		background-color: @green;
-		&:hover, &:active, &:focus {
-			background-color: darken(@green, 15%);
-		}
+		background: @primary-button-colour;
+		border-radius: 4px;
 	}
 
 	.btn-square {
