--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -44,6 +44,8 @@
 @light-fg: white;
 @dark-fg: #414352;
 
+@primary-button-colour: #3E60C6;
+
 @default-button-colour: #deb686;
 @darken-default-button-colour: darken(@default-button-colour, 10%);
 @dropshadow-colour: rgba(0,0,0,0.2);
