--- a/src/style/ImpactCalculator.less
+++ b/src/style/ImpactCalculator.less
@@ -1,6 +1,6 @@
 @import "colours.less";
 
-.CharityPageImpactAndDonate {
+.ImpactCalculator {
 	width: 100%;
 }
 
@@ -157,7 +157,7 @@
 	background-color: @colour-04;
 }
 
-.CharityPageImpactAndDonate {
+.ImpactCalculator {
 	.impact {
 		.impact-text {
 			text-align: center;
