--- a/src/style/main.less
+++ b/src/style/main.less
@@ -49,7 +49,7 @@
 @import "EditCharityPage.less";
 @import "SearchPage.less";
 @import "CharityPage.less";
-@import "CharityPageImpactAndDonate.less";
+@import "ImpactCalculator.less";
 @import "DonationWizard.less";
 @import "FundRaiserPage.less";
 @import "RegisterPage.less";
