--- a/src/style/main.less
+++ b/src/style/main.less
@@ -60,7 +60,7 @@ h1, .h1, h2, .h2, h3, .h3 {
 @import "EditCharityPage.less";
 @import "SearchPage.less";
 @import "CharityPage.less";
-@import "CharityPageImpactAndDonate.less";
+@import "ImpactCalculator.less";
 @import "DonationWizard.less";
 @import "FundRaiserPage.less";
 @import "RegisterPage.less";
