Add Impact Calculator heading

--- a/src/style/fonts.less
+++ b/src/style/fonts.less
@@ -18,6 +18,7 @@
 .header-section-title {
 	text-transform: capitalize;
 	font-family: @standard-text-font;
+	color: @header-section-title-colour;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 24px;
