--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -34,6 +34,7 @@
 @charity-page-greybg: #E4E7EB;
 @charity-page-greyline: #C8CBD1;
 @charity-page-summary-text-colour: #414141;
+@header-section-title-colour: #414141;
 
 // NB: others are done in base/style/colours.less
 @color-twitter: #4099ff;
