Make Impact Calculator border match designs

--- a/src/style/ImpactCalculator.less
+++ b/src/style/ImpactCalculator.less
@@ -29,7 +29,13 @@
 
 .donation-impact {
 	background-color: white;
-	box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.2);
+	border: 1px solid @grey-border-colour;
+	box-sizing: border-box;
+
+	/* Drop Shadow */
+	box-shadow: 0px 3px 6px rgba(81, 81, 81, 0.125);
+
+	border-radius: 4px;
 
 	/* Appear in front of the social share buttons */
 	position: relative;
