--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -36,6 +36,8 @@
 @charity-page-summary-text-colour: #414141;
 @header-section-title-colour: #414141;
 
+@grey-border-colour: #D7DBDC;
+
 // NB: others are done in base/style/colours.less
 @color-twitter: #4099ff;
 @color-facebook: #3b5998;
