--- a/src/style/colours.less
+++ b/src/style/colours.less
@@ -9,8 +9,12 @@
 @pale-blue: #81bee8;
 @paler-blue: #add4f0;
 @palest-blue: #d9ebf8;
-@green: #00A55E;
-// + shades by 
+@green: #00A55E; 
+//colours from Brian
+@dark-turquoise: #39917F;
+@white: #FFFFFF;
+@dark-grey: #414141;
+
 
 /* Corrado's original palette TODO refactor out, prefer semantic names */
 @colour-01: #F04B47;
@@ -27,14 +31,15 @@
 
 @donation-amt-bg: @orange-lighter;
 @donation-amt-input-bg: #FDE8BA;
-@donation-amt-fg: #3E4050;
-@donation-number-fg: @orange;
+@donation-amt-fg: @dark-turquoise;
+@donation-number-fg: @dark-turquoise;
 @donation-button-bg: @green;
 
 @charity-page-greybg: #E4E7EB;
 @charity-page-greyline: #C8CBD1;
-@charity-page-summary-text-colour: #414141;
-@header-section-title-colour: #414141;
+@charity-page-summary-text-colour: @dark-grey;
+@charity-page-impact-calculator-text: @dark-grey;
+@header-section-title-colour: @dark-grey;
 
 @grey-border-colour: #D7DBDC;
 
@@ -47,7 +52,9 @@
 @light-fg: white;
 @dark-fg: #414352;
 
+//colours from Brian
 @primary-button-colour: #3E60C6;
+
 
 @default-button-colour: #deb686;
 @darken-default-button-colour: darken(@default-button-colour, 10%);
