--- a/src/style/ImpactCalculator.less
+++ b/src/style/ImpactCalculator.less
@@ -33,7 +33,8 @@
 	box-sizing: border-box;
 	color: @charity-page-impact-calculator-text;
 	display: flex;
-	justify-content: space-between;
+	flex-wrap: wrap;
+	justify-content: space-around;
 	align-items: center;
 	padding: 1.25em 2em 1.25em 1.25em;
 
@@ -73,8 +74,13 @@
 	}
 
 	.will-fund {
-			font-size: 1.125em;
+		font-size: 1.286em;
 	}
+
+	.donation-description {
+		font-size: 1.143em;
+	}
+
 	.form-group {
 		margin-bottom: 0;
 	}
@@ -101,20 +107,20 @@
 				border: none;
 				border-radius: 0;
 				box-shadow: none;
-				font-size: 1.75em;
+				font-size: 2em;
 				font-weight: 800;
 				height: inherit;
 			}
 
 	/* The output column - weird margins and padding on left to make room for the arrow graphic between the columns */
 		.output-number {
-			font-size: 1.75em;
+			font-size: 2em;
 			font-weight: 800;
 			color: @donation-number-fg;
 		}
 
 		.output-units {
-			font-size: 1.125em;
+			font-size: 1.286em;
 		}
 
 }
@@ -183,4 +189,8 @@
 }
 .facebook-btn:hover {
 	color: @color-facebook;
+}
+
+.header .description-short p {
+	font-size: 1.143em;
 }
