--- a/src/style/sogive-fonts.less
+++ b/src/style/sogive-fonts.less
@@ -12,3 +12,8 @@ html {
 h1, .h1, h2, .h2, h3, .h3 {
 	font-family: Roboto;
 }
+
+/**
+For a smaller version of a style, use <small> or .small
+*/
+
