--- a/src/style/main.less
+++ b/src/style/main.less
@@ -92,3 +92,12 @@ body {
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.05);
 }
+
+//for consistent border styling across the app
+.border {
+	border: 1px solid @grey-border-colour;
+	padding: 1.25em 2em 1.25em 1.25em;
+	box-shadow: 0px 3px 6px rgba(81, 81, 81, 0.125);
+	border-radius: 4px;
+	box-sizing: border-box;
+}
