Create learn about our ratings modal box

--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -109,8 +109,17 @@
 				}
 
 			}
-
+			
 		} // ./header
+
+		.ratings-button {
+			background: none;
+			border: none;
+			padding: 0;
+			color: @dark-turquoise;
+			text-decoration: underline;
+			margin-bottom: 1rem;
+		}
 
 		.impact {
 			margin-bottom: 30px;
