Make ratings and button pop - larger

--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -123,6 +123,13 @@
 
 		.impact {
 			margin-bottom: 30px;
+			img {
+				height: 64px;
+			}
+			button {
+				height: 64px;
+				min-width: 100px;
+			}
 		}
 	} // ./.impact-column
 } 
