Remove unnecessary local styles

--- a/src/style/ImpactCalculator.less
+++ b/src/style/ImpactCalculator.less
@@ -91,7 +91,7 @@
 				border: none;
 				border-radius: 0;
 				box-shadow: none;
-				//font-size and weight set here to match figma - bold & 28px
+				//font-size and weight set here to match figma - bold & 28px - specific to this widget for emphasis
 				font-size: 2em;
 				font-weight: 800;
 				height: inherit;
