--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -78,10 +78,6 @@
 				height: 60px;
 			.charity-name {
 				text-transform: capitalize;
-				font-family: 'Nunito Sans';
-				font-weight: 800;
-				font-size: 32px;
-				color: #414141;
 				margin-top: 0;
 				margin-bottom: 0;
 				.extend-bg-to-sides(@bs-column-padding);
@@ -221,7 +217,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			height: inherit;
+			height: inherit; //this ensures photos with a large height do not exceed the height of the parent container
 
 			img {
 				// border-radius: 50%;
