Change rating badge size and include later in page

--- a/src/style/CharityPage.less
+++ b/src/style/CharityPage.less
@@ -116,18 +116,10 @@
 			text-decoration: underline;
 			margin-bottom: 1rem;
 		}
-
-		.impact {
-			margin-bottom: 30px;
-			img {
-				height: 64px;
-			}
-			button {
-				height: 64px;
-				min-width: 100px;
-			}
-		}
 	} // ./.impact-column
+	.container.impact {
+		margin-bottom: 30px;
+	}
 } 
 
 #charity {
